// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stat Items Component disable charts it renders the default widget 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Memo()
    description="HOSTS"
    fields={
      Array [
        Object {
          "color": "#3185FC",
          "icon": "cross",
          "key": "hosts",
          "value": null,
        },
      ]
    }
    key="mock-keys"
  >
    <Styled(EuiFlexItem)>
      <EuiFlexItem
        className="sc-bdVaJa ggIbLt"
      >
        <div
          className="euiFlexItem sc-bdVaJa ggIbLt"
        >
          <EuiPanel
            grow={true}
            hasShadow={false}
            paddingSize="m"
          >
            <div
              className="euiPanel euiPanel--paddingMedium"
            >
              <EuiTitle
                size="xxxs"
              >
                <h6
                  className="euiTitle euiTitle--xxxsmall"
                >
                  HOSTS
                </h6>
              </EuiTitle>
              <EuiFlexGroup>
                <div
                  className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <Styled(EuiFlexItem)
                    key="stat-items-field-hosts"
                  >
                    <EuiFlexItem
                      className="sc-bdVaJa ggIbLt"
                    >
                      <div
                        className="euiFlexItem sc-bdVaJa ggIbLt"
                      >
                        <EuiFlexGroup
                          alignItems="center"
                          gutterSize="m"
                          responsive={false}
                        >
                          <div
                            className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                          >
                            <Styled(EuiFlexItem)>
                              <EuiFlexItem
                                className="sc-bdVaJa ggIbLt"
                              >
                                <div
                                  className="euiFlexItem sc-bdVaJa ggIbLt"
                                >
                                  <Styled(EuiTitle)>
                                    <EuiTitle
                                      className="sc-bwzfXH hCEwEt"
                                    >
                                      <p
                                        className="euiTitle euiTitle--medium sc-bwzfXH hCEwEt"
                                        data-test-subj="stat-title"
                                      >
                                        --
                                         
                                      </p>
                                    </EuiTitle>
                                  </Styled(EuiTitle)>
                                </div>
                              </EuiFlexItem>
                            </Styled(EuiFlexItem)>
                          </div>
                        </EuiFlexGroup>
                      </div>
                    </EuiFlexItem>
                  </Styled(EuiFlexItem)>
                </div>
              </EuiFlexGroup>
              <EuiFlexGroup>
                <div
                  className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                />
              </EuiFlexGroup>
            </div>
          </EuiPanel>
        </div>
      </EuiFlexItem>
    </Styled(EuiFlexItem)>
  </Memo()>
</Provider>
`;

exports[`Stat Items Component disable charts it renders the default widget 2`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Memo()
    areaChart={Array []}
    barChart={Array []}
    description="HOSTS"
    fields={
      Array [
        Object {
          "color": "#3185FC",
          "icon": "cross",
          "key": "hosts",
          "value": null,
        },
      ]
    }
    key="mock-keys"
  >
    <Styled(EuiFlexItem)>
      <EuiFlexItem
        className="sc-bdVaJa ggIbLt"
      >
        <div
          className="euiFlexItem sc-bdVaJa ggIbLt"
        >
          <EuiPanel
            grow={true}
            hasShadow={false}
            paddingSize="m"
          >
            <div
              className="euiPanel euiPanel--paddingMedium"
            >
              <EuiTitle
                size="xxxs"
              >
                <h6
                  className="euiTitle euiTitle--xxxsmall"
                >
                  HOSTS
                </h6>
              </EuiTitle>
              <EuiFlexGroup>
                <div
                  className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <Styled(EuiFlexItem)
                    key="stat-items-field-hosts"
                  >
                    <EuiFlexItem
                      className="sc-bdVaJa ggIbLt"
                    >
                      <div
                        className="euiFlexItem sc-bdVaJa ggIbLt"
                      >
                        <EuiFlexGroup
                          alignItems="center"
                          gutterSize="m"
                          responsive={false}
                        >
                          <div
                            className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                          >
                            0
                            <Styled(EuiFlexItem)>
                              <EuiFlexItem
                                className="sc-bdVaJa ggIbLt"
                              >
                                <div
                                  className="euiFlexItem sc-bdVaJa ggIbLt"
                                >
                                  <Styled(EuiTitle)>
                                    <EuiTitle
                                      className="sc-bwzfXH hCEwEt"
                                    >
                                      <p
                                        className="euiTitle euiTitle--medium sc-bwzfXH hCEwEt"
                                        data-test-subj="stat-title"
                                      >
                                        --
                                         
                                      </p>
                                    </EuiTitle>
                                  </Styled(EuiTitle)>
                                </div>
                              </EuiFlexItem>
                            </Styled(EuiFlexItem)>
                          </div>
                        </EuiFlexGroup>
                      </div>
                    </EuiFlexItem>
                  </Styled(EuiFlexItem)>
                </div>
              </EuiFlexGroup>
              <EuiFlexGroup>
                <div
                  className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                />
              </EuiFlexGroup>
            </div>
          </EuiPanel>
        </div>
      </EuiFlexItem>
    </Styled(EuiFlexItem)>
  </Memo()>
</Provider>
`;

exports[`Stat Items Component rendering kpis with charts it renders the default widget 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Memo()
    areaChart={
      Array [
        Object {
          "color": "#DB1374",
          "key": "uniqueSourceIpsHistogram",
          "value": Array [
            Object {
              "x": 1556888400000,
              "y": 565975,
            },
            Object {
              "x": 1556931600000,
              "y": 1084366,
            },
            Object {
              "x": 1556974800000,
              "y": 12280,
            },
          ],
        },
        Object {
          "color": "#490092",
          "key": "uniqueDestinationIpsHistogram",
          "value": Array [
            Object {
              "x": 1556888400000,
              "y": 565975,
            },
            Object {
              "x": 1556931600000,
              "y": 1084366,
            },
            Object {
              "x": 1556974800000,
              "y": 12280,
            },
          ],
        },
      ]
    }
    barChart={
      Array [
        Object {
          "color": "#DB1374",
          "key": "uniqueSourceIps",
          "value": Array [
            Object {
              "x": "uniqueSourceIps",
              "y": "1714",
            },
          ],
        },
        Object {
          "color": "#490092",
          "key": "uniqueDestinationIps",
          "value": Array [
            Object {
              "x": "uniqueDestinationIps",
              "y": 2354,
            },
          ],
        },
      ]
    }
    description="UNIQUE_PRIVATE_IPS"
    enableAreaChart={true}
    enableBarChart={true}
    fields={
      Array [
        Object {
          "color": "#DB1374",
          "description": "Source",
          "icon": "cross",
          "key": "uniqueSourceIps",
          "value": 1714,
        },
        Object {
          "color": "#490092",
          "description": "Dest.",
          "icon": "cross",
          "key": "uniqueDestinationIps",
          "render": [MockFunction] {
            "calls": Array [
              Array [
                2359,
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": "2,359",
              },
            ],
          },
          "value": 2359,
        },
      ]
    }
    key="mock-keys"
  >
    <Styled(EuiFlexItem)>
      <EuiFlexItem
        className="sc-bdVaJa ggIbLt"
      >
        <div
          className="euiFlexItem sc-bdVaJa ggIbLt"
        >
          <EuiPanel
            grow={true}
            hasShadow={false}
            paddingSize="m"
          >
            <div
              className="euiPanel euiPanel--paddingMedium"
            >
              <EuiTitle
                size="xxxs"
              >
                <h6
                  className="euiTitle euiTitle--xxxsmall"
                >
                  UNIQUE_PRIVATE_IPS
                </h6>
              </EuiTitle>
              <EuiFlexGroup>
                <div
                  className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <Styled(EuiFlexItem)
                    key="stat-items-field-uniqueSourceIps"
                  >
                    <EuiFlexItem
                      className="sc-bdVaJa ggIbLt"
                    >
                      <div
                        className="euiFlexItem sc-bdVaJa ggIbLt"
                      >
                        <EuiFlexGroup
                          alignItems="center"
                          gutterSize="m"
                          responsive={false}
                        >
                          <div
                            className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                          >
                            <Styled(EuiFlexItem)
                              grow={false}
                            >
                              <EuiFlexItem
                                className="sc-bdVaJa ggIbLt"
                                grow={false}
                              >
                                <div
                                  className="euiFlexItem euiFlexItem--flexGrowZero sc-bdVaJa ggIbLt"
                                >
                                  <EuiIcon
                                    color="#DB1374"
                                    data-test-subj="stat-icon"
                                    size="l"
                                    type="cross"
                                  >
                                    <EuiIconEmpty
                                      className="euiIcon euiIcon--large euiIcon-isLoading"
                                      data-test-subj="stat-icon"
                                      focusable="false"
                                      style={
                                        Object {
                                          "fill": "#DB1374",
                                        }
                                      }
                                    >
                                      <svg
                                        className="euiIcon euiIcon--large euiIcon-isLoading"
                                        data-test-subj="stat-icon"
                                        focusable="false"
                                        height={16}
                                        style={
                                          Object {
                                            "fill": "#DB1374",
                                          }
                                        }
                                        viewBox="0 0 16 16"
                                        width={16}
                                        xmlns="http://www.w3.org/2000/svg"
                                      />
                                    </EuiIconEmpty>
                                  </EuiIcon>
                                </div>
                              </EuiFlexItem>
                            </Styled(EuiFlexItem)>
                            <Styled(EuiFlexItem)>
                              <EuiFlexItem
                                className="sc-bdVaJa ggIbLt"
                              >
                                <div
                                  className="euiFlexItem sc-bdVaJa ggIbLt"
                                >
                                  <Styled(EuiTitle)>
                                    <EuiTitle
                                      className="sc-bwzfXH hCEwEt"
                                    >
                                      <p
                                        className="euiTitle euiTitle--medium sc-bwzfXH hCEwEt"
                                        data-test-subj="stat-title"
                                      >
                                        1714
                                         
                                        Source
                                      </p>
                                    </EuiTitle>
                                  </Styled(EuiTitle)>
                                </div>
                              </EuiFlexItem>
                            </Styled(EuiFlexItem)>
                          </div>
                        </EuiFlexGroup>
                      </div>
                    </EuiFlexItem>
                  </Styled(EuiFlexItem)>
                  <Styled(EuiFlexItem)
                    key="stat-items-field-uniqueDestinationIps"
                  >
                    <EuiFlexItem
                      className="sc-bdVaJa ggIbLt"
                    >
                      <div
                        className="euiFlexItem sc-bdVaJa ggIbLt"
                      >
                        <EuiFlexGroup
                          alignItems="center"
                          gutterSize="m"
                          responsive={false}
                        >
                          <div
                            className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                          >
                            <Styled(EuiFlexItem)
                              grow={false}
                            >
                              <EuiFlexItem
                                className="sc-bdVaJa ggIbLt"
                                grow={false}
                              >
                                <div
                                  className="euiFlexItem euiFlexItem--flexGrowZero sc-bdVaJa ggIbLt"
                                >
                                  <EuiIcon
                                    color="#490092"
                                    data-test-subj="stat-icon"
                                    size="l"
                                    type="cross"
                                  >
                                    <EuiIconEmpty
                                      className="euiIcon euiIcon--large euiIcon-isLoading"
                                      data-test-subj="stat-icon"
                                      focusable="false"
                                      style={
                                        Object {
                                          "fill": "#490092",
                                        }
                                      }
                                    >
                                      <svg
                                        className="euiIcon euiIcon--large euiIcon-isLoading"
                                        data-test-subj="stat-icon"
                                        focusable="false"
                                        height={16}
                                        style={
                                          Object {
                                            "fill": "#490092",
                                          }
                                        }
                                        viewBox="0 0 16 16"
                                        width={16}
                                        xmlns="http://www.w3.org/2000/svg"
                                      />
                                    </EuiIconEmpty>
                                  </EuiIcon>
                                </div>
                              </EuiFlexItem>
                            </Styled(EuiFlexItem)>
                            <Styled(EuiFlexItem)>
                              <EuiFlexItem
                                className="sc-bdVaJa ggIbLt"
                              >
                                <div
                                  className="euiFlexItem sc-bdVaJa ggIbLt"
                                >
                                  <Styled(EuiTitle)>
                                    <EuiTitle
                                      className="sc-bwzfXH hCEwEt"
                                    >
                                      <p
                                        className="euiTitle euiTitle--medium sc-bwzfXH hCEwEt"
                                        data-test-subj="stat-title"
                                      >
                                        2,359
                                         
                                        Dest.
                                      </p>
                                    </EuiTitle>
                                  </Styled(EuiTitle)>
                                </div>
                              </EuiFlexItem>
                            </Styled(EuiFlexItem)>
                          </div>
                        </EuiFlexGroup>
                      </div>
                    </EuiFlexItem>
                  </Styled(EuiFlexItem)>
                </div>
              </EuiFlexGroup>
              <EuiHorizontalRule>
                <hr
                  className="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginLarge"
                />
              </EuiHorizontalRule>
              <EuiFlexGroup>
                <div
                  className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <Styled(EuiFlexItem)>
                    <EuiFlexItem
                      className="sc-bdVaJa ggIbLt"
                    >
                      <div
                        className="euiFlexItem sc-bdVaJa ggIbLt"
                      >
                        <Memo(mockConstructor)
                          barChart={
                            Array [
                              Object {
                                "color": "#DB1374",
                                "key": "uniqueSourceIps",
                                "value": Array [
                                  Object {
                                    "x": "uniqueSourceIps",
                                    "y": "1714",
                                  },
                                ],
                              },
                              Object {
                                "color": "#490092",
                                "key": "uniqueDestinationIps",
                                "value": Array [
                                  Object {
                                    "x": "uniqueDestinationIps",
                                    "y": 2354,
                                  },
                                ],
                              },
                            ]
                          }
                          configs={
                            Object {
                              "axis": Object {
                                "xTickFormatter": [Function],
                              },
                              "series": Object {
                                "xScaleType": "ordinal",
                                "yScaleType": "linear",
                              },
                            }
                          }
                        />
                      </div>
                    </EuiFlexItem>
                  </Styled(EuiFlexItem)>
                  <Styled(EuiFlexItem)>
                    <EuiFlexItem
                      className="sc-bdVaJa ggIbLt"
                    >
                      <div
                        className="euiFlexItem sc-bdVaJa ggIbLt"
                      >
                        <Connect(GlobalTimeComponent)>
                          <GlobalTimeComponent
                            deleteAllQuery={[Function]}
                            from={0}
                            setGlobalQuery={[Function]}
                            to={1}
                          >
                            <Memo(mockConstructor)
                              areaChart={
                                Array [
                                  Object {
                                    "color": "#DB1374",
                                    "key": "uniqueSourceIpsHistogram",
                                    "value": Array [
                                      Object {
                                        "x": 1556888400000,
                                        "y": 565975,
                                      },
                                      Object {
                                        "x": 1556931600000,
                                        "y": 1084366,
                                      },
                                      Object {
                                        "x": 1556974800000,
                                        "y": 12280,
                                      },
                                    ],
                                  },
                                  Object {
                                    "color": "#490092",
                                    "key": "uniqueDestinationIpsHistogram",
                                    "value": Array [
                                      Object {
                                        "x": 1556888400000,
                                        "y": 565975,
                                      },
                                      Object {
                                        "x": 1556931600000,
                                        "y": 1084366,
                                      },
                                      Object {
                                        "x": 1556974800000,
                                        "y": 12280,
                                      },
                                    ],
                                  },
                                ]
                              }
                              configs={
                                Object {
                                  "axis": Object {
                                    "xTickFormatter": [Function],
                                    "yTickFormatter": [Function],
                                  },
                                  "series": Object {
                                    "xScaleType": "time",
                                    "yScaleType": "linear",
                                  },
                                }
                              }
                            />
                          </GlobalTimeComponent>
                        </Connect(GlobalTimeComponent)>
                      </div>
                    </EuiFlexItem>
                  </Styled(EuiFlexItem)>
                </div>
              </EuiFlexGroup>
            </div>
          </EuiPanel>
        </div>
      </EuiFlexItem>
    </Styled(EuiFlexItem)>
  </Memo()>
</Provider>
`;
